--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 	<!-- A classe do corpo define o tema. -->
 	<body>
 		<div class="canvas">
-			A
+			<div hidden class="selection"></div>
 		</div>
 		<div class="bar">
 			<div class="button pencil">
