feat(index): add random button
Co-authored-by: Renan V. Guedes <renanv.guedes7@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,10 @@
 			</div>
 		</div>
 		<div class="bar">
-			<div class="button pencil">
+			<div class="button pencil random">
+				random
+			</div>
+			<div class="button pencil selection">
 				pencil
 			</div>
 			<div class="button eraser">
