--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,6 @@
 	<!-- A classe do corpo define o tema. -->
 	<body>
 		<div class="canvas">
-			<div class="node">
-				10
-			</div>
 		</div>
 		<div class="bar">
 			<div class="button pencil random">
@@ -45,6 +42,6 @@
 	</body>
 
 	<script defer type="module" src="./selection.js"></script>
-	<script defer type="text/javascript" src="./main.js"></script>
+	<script defer type="module" src="./main.js"></script>
 
 </html>
